add download links

--- a/_layouts/downloads.html
+++ b/_layouts/downloads.html
@@ -19,48 +19,113 @@
       <div class="col-12">
         
 
-        <h3 class="font-h4 fontw-400">Binaries Install</h3>
+        <h3 class="font-h6 fontw-400">Binaries Install | Version: v0.1.0-alpha</h3>
         <table class="table table-bordered">
           <thead>
             <tr>
               <th scope="col">Platform</th>
-              <th scope="col">Download Link</th>
+              <th scope="col">Web App</th>
+              <th scope="col">Desktop App</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>Mac x64</td>
-              <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.0.1/zasper-0.0.1-mac.zip"
-                  class="btn-bg" target="_blank">Coming Soon!</a>
-              </td>
-            </tr>
-            <tr>
               <td>Mac Apple Silicon</td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.0.1/zasper-0.0.1-mac.zip"
-                  class="btn-bg" target="_blank">Coming Soon!</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-darwin-arm64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+              </td>
+              <td>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper_0.1.0-alpha_arm64_mac.dmg" class="btn btn-bg" target="_blank">Download</a>
               </td>
             </tr>
             <tr>
-              <td>Linux Debian</td>
+              <td>Mac AMD 64</td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.0.1/zasper-0.0.1-linux.zip"
-                  class="btn-bg" target="_blank">Coming Soon!</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-darwin-amd64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+              </td>
+              <td>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper_0.1.0-alpha_x64_mac.dmg" class="btn btn-bg" target="_blank">Download</a>
               </td>
             </tr>
             <tr>
-              <td>Linux</td>
+              <td>Linux Debian (AMD - X64)</td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.0.1/zasper-0.0.1-linux.zip"
-                  class="btn-bg" target="_blank">Coming Soon!</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-linux-amd64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+              </td>
+              <td>
+                <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
               </td>
             </tr>
             <tr>
-              <td>Windows</td>
+              <td>Linux Debian (ARM - X64)</td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.0.1/zasper-0.0.1-windows.zip"
-                  class="btn-bg" target="_blank">Coming Soon!</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-linux-arm64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+              </td>
+              <td>
+                <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
+              </td>
+            </tr>
+            <tr>
+              <td>Linux Debian (i386)</td>
+              <td>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-linux-386.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+              </td>
+              <td>
+                <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
+              </td>
+            </tr>
+            <tr>
+              <td>Linux Redhat (AMD X64)</td>
+              <td>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-linux-amd64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+              </td>
+              <td>
+                <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
+              </td>
+            </tr>
+            <tr>
+              <td>Linux Redhat (ARM X64)</td>
+              <td>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-linux-arm64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+              </td>
+              <td>
+                <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
+              </td>
+            </tr>
+            <tr>
+              <td>Linux Redhat (i386)</td>
+              <td>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-linux-386.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+              </td>
+              <td>
+                <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
+              </td>
+            </tr>
+            <tr>
+              <td>Windows (AMD 64)</td>
+              <td>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-windows-amd64.zip" class="btn btn-bg" target="_blank">Download</a>
+              </td>
+              <td>
+                <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>  
+              </td>
+            </tr>
+            <tr>
+              <td>Windows (ARM 64)</td>
+              <td>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-windows-arm64.zip" class="btn btn-bg" target="_blank">Download</a>
+              </td>
+              <td>
+                <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
+              </td>
+            </tr>
+            <tr>
+              <td>Windows (i386)</td>
+              <td>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-windows-386.zip" class="btn btn-bg" target="_blank">Download</a>
+              </td>
+              <td>
+                <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
               </td>
             </tr>
           </tbody>
