--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@
               It's perfectly suited for running REPL-style data applications, e.g. <strong>Jupyter notebooks</strong>.
             </p>
             <div class="header-form wow fadeInUp" data-wow-delay="0.2s">
-               <a href="https://github.com/zasper-io/zasper" target="_blank" class="custom-btn btn-bg hover-bg" id="banner-signup">Checkout on Github! <img src="/static/images/github-icon.svg" alt="#"></a>
+               <a href="https://github.com/zasper-io/zasper" target="_blank" class="btn custom-btn btn-bg hover-bg" id="banner-signup">Checkout on Github! <img src="/static/images/github-icon.svg" alt="#"></a>
             </div>
           </div>
         </div>
