Add new blog and add value proposition on website

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,16 +5,22 @@
       <div class="row">
         <div class="col-12 col-md-12 col-lg-6">
           <div class="header-text wow fadeInUp" data-wow-delay="0.2s">
-            <h3 class="font-h3 fontw-500">4X Better IDE</h3>
-            <h3 class="font-h4 fontw-300">than JupyterLab</h3>
+            <h3 class="font-h3 fontw-500">High Performance IDE</h3>
+            <h3 class="font-h4 fontw-300">for Jupyter Notebooks</h3>
             <p class="font-p">
-              Zasper is an IDE designed from the ground up to support massive concurrency. It provides a minimal memory footprint, exceptional speed, and the ability to handle numerous concurrent connections.
+              How is Zasper better than JupyterLab ?
             </p>
             <p class="font-p">
-              It's perfectly suited for running REPL-style data applications, e.g. <strong>Jupyter notebooks</strong>.
+              <ul class="font-p">
+                <li>Upto 5X Lesser CPU usage</li>
+                <li>Upto 40X Lesser RAM usage </li>
+                <li>Lower latency</li>
+                <li>Higher throughput</li>
+                <li>Highly resilient under very high loads</li>
+              </ul>
             </p>
             <div class="header-form wow fadeInUp" data-wow-delay="0.2s">
-               <a href="https://github.com/zasper-io/zasper" target="_blank" class="btn custom-btn btn-bg hover-bg" id="banner-signup">Checkout on Github! <img src="/static/images/github-icon.svg" alt="#"></a>
+               <a href="/downloads" target="_blank" class="btn custom-btn btn-bg hover-bg" id="banner-signup">Download Zasper today!</a>
             </div>
           </div>
         </div>
@@ -36,7 +42,7 @@
           <div class="section-title wow fadeInUp" data-wow-delay="0.2s">
             <h2 class="font-h2 fontw-300">blazingly fast & <span class="fontw-500">Super Efficient</span></h2>
             <p class="font-p">Zasper scales to all your CPU cores unlike Jupyterlab and uses only a quarter of RAM and CPU.</p>
-            <a href="https://github.com/zasper-io/zasper" class="btn-bg-white fontw-500" target="_blank">Try it now</a>
+            <a href="https://github.com/zasper-io/zasper-benchmark?tab=readme-ov-file#benchmarking-zasper-vs-jupyter-server" class="btn-bg-white fontw-500" target="_blank">Read Benchmark Report</a>
           </div>
           <div class="header-bottom-image wow fadeInUp" data-wow-delay="0.4s">
             <img src="/static/images/screen-image.png" alt="#">
