update the blog with latest report

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,8 +12,8 @@
             </p>
             <p class="font-p">
               <ul class="font-p">
-                <li>Up to 5X Lesser CPU usage</li>
-                <li>Up to 40X Lesser RAM usage </li>
+                <li>Up to 5X Less CPU usage</li>
+                <li>Up to 40X Less RAM usage </li>
                 <li>Lower latency</li>
                 <li>Higher throughput</li>
                 <li>Highly resilient under very high loads</li>
