--- a/_layouts/downloads.html
+++ b/_layouts/downloads.html
@@ -17,7 +17,19 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        
+        <h3 class="font-h6 fontw-400">Install via homebrew</h3>
+        <pre>
+          <code id="bashCommand">
+            brew install zasper-io/tap/zasper
+          </code>
+        </pre>
+
+        <h3 class="font-h6 fontw-400">Install via Snap</h3>
+        <pre>
+          <code id="bashCommand">
+            sudo snap install zasper
+          </code>
+        </pre>
 
         <h3 class="font-h6 fontw-400">Binaries Install | Version: v0.1.0-alpha</h3>
         <table class="table table-bordered">
@@ -53,7 +65,7 @@
                 <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-linux-amd64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
               </td>
               <td>
-                <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper_0.1.0-alpha_amd64_linux.deb" class="btn btn-bg" target="_blank">Download</a>
               </td>
             </tr>
             <tr>
@@ -62,7 +74,7 @@
                 <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-linux-arm64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
               </td>
               <td>
-                <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper_0.1.0-alpha_arm64_linux.deb" class="btn btn-bg" target="_blank">Download</a>
               </td>
             </tr>
             <tr>
@@ -107,7 +119,7 @@
                 <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-windows-amd64.zip" class="btn btn-bg" target="_blank">Download</a>
               </td>
               <td>
-                <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>  
+                <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
               </td>
             </tr>
             <tr>
@@ -116,7 +128,7 @@
                 <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-windows-arm64.zip" class="btn btn-bg" target="_blank">Download</a>
               </td>
               <td>
-                <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper_0.1.0-alpha_arm64_win.exe" class="btn btn-bg" target="_blank">Download</a>
               </td>
             </tr>
             <tr>
