--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,7 +41,7 @@
         <div class="header-bottom-wraper">
           <div class="section-title wow fadeInUp" data-wow-delay="0.2s">
             <h2 class="font-h2 fontw-300">blazingly fast & <span class="fontw-500">Super Efficient</span></h2>
-            <p class="font-p">Zasper scales to all your CPU cores unlike Jupyterlab and uses only a quarter of RAM and CPU.</p>
+            <p class="font-p">Zasper scales to all your CPU cores unlike Jupyterlab.</p>
             <a href="https://github.com/zasper-io/zasper-benchmark?tab=readme-ov-file#benchmarking-zasper-vs-jupyter-server" class="btn-bg-white fontw-500" target="_blank">Read Benchmark Report</a>
           </div>
           <div class="header-bottom-image wow fadeInUp" data-wow-delay="0.4s">
