--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,10 +9,10 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="article">
     <meta property="og:title" content="Zasper: High Performance IDE for Jupyter Notebooks">
-    <meta property="og:description" content="">
+    <meta property="og:description" content="Zasper is a high performance IDE for Jupyter Notebooks, designed to be super efficient and scalable. It uses 5X less CPU and 40X less RAM compared to JupyterLab, making it ideal for data science tasks.">
     <meta property="og:url" content="https://zasper.io/">
     <meta property="og:site_name" content="Zasper: A Supercharged IDE for Data Science">
-    <meta property="og:image" content="https://zasper.io/static/images/favicon.png">
+    <meta property="og:image" content="https://zasper.io/static/images/social_preview.png">
 
 
 
