--- a/_includes/header2.html
+++ b/_includes/header2.html
@@ -2,19 +2,7 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="Zasper: High Performance IDE for Jupyter Notebooks">
-    <meta name="description" content="">
-    <meta property="og:locale" content="en_US">
-    <meta property="og:type" content="article">
-    <meta property="og:title" content="Zasper: High Performance IDE for Jupyter Notebooks">
-    <meta property="og:description" content="Zasper is a high performance IDE for Jupyter Notebooks, designed to be super efficient and scalable. It uses 5X less CPU and 40X less RAM compared to JupyterLab, making it ideal for data science tasks.">
-    <meta property="og:url" content="https://zasper.io/">
-    <meta property="og:site_name" content="Zasper: A Supercharged IDE for Data Science">
-    <meta property="og:image" content="https://zasper.io/static/images/social_preview.png">
-
-
+    {% include meta.html %}
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
