add conda install instruction

--- a/_layouts/downloads.html
+++ b/_layouts/downloads.html
@@ -30,6 +30,13 @@
             sudo snap install zasper
           </code>
         </pre>
+        <h3 class="font-h6 fontw-400">Install via Conda</h3>
+        <pre>
+          <code id="bashCommand">
+            conda install zasper -c conda-forge
+          </code>
+        </pre>
+
 
         <h3 class="font-h6 fontw-400">Binaries Install | Version: v0.1.0-alpha</h3>
         <table class="table table-bordered">
