--- a/_layouts/downloads.html
+++ b/_layouts/downloads.html
@@ -1,4 +1,5 @@
 {% include header2.html %}
+{% assign version = "v0.2.0-beta" %}
 
 <section id="zasper-documentation">
   <div class="zasper-documentation-header">
@@ -38,7 +39,7 @@
         </pre>
 
 
-        <h3 class="font-h6 fontw-400">Binaries Install | Version: v0.1.0-alpha</h3>
+        <h3 class="font-h6 fontw-400">Binaries Install | Version: {{version}} </h3>
         <table class="table table-bordered">
           <thead>
             <tr>
@@ -51,43 +52,43 @@
             <tr>
               <td>Mac Apple Silicon</td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-darwin-arm64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper-webapp-darwin-arm64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
               </td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper_0.1.0-alpha_arm64_mac.dmg" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper_0.1.0-alpha_arm64_mac.dmg" class="btn btn-bg" target="_blank">Download</a>
               </td>
             </tr>
             <tr>
               <td>Mac AMD 64</td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-darwin-amd64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper-webapp-darwin-amd64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
               </td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper_0.1.0-alpha_x64_mac.dmg" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper_0.1.0-alpha_x64_mac.dmg" class="btn btn-bg" target="_blank">Download</a>
               </td>
             </tr>
             <tr>
               <td>Linux Debian (AMD - X64)</td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-linux-amd64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper-webapp-linux-amd64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
               </td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper_0.1.0-alpha_amd64_linux.deb" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper_0.1.0-alpha_amd64_linux.deb" class="btn btn-bg" target="_blank">Download</a>
               </td>
             </tr>
             <tr>
               <td>Linux Debian (ARM - X64)</td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-linux-arm64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper-webapp-linux-arm64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
               </td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper_0.1.0-alpha_arm64_linux.deb" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper_0.1.0-alpha_arm64_linux.deb" class="btn btn-bg" target="_blank">Download</a>
               </td>
             </tr>
             <tr>
               <td>Linux Debian (i386)</td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-linux-386.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper-webapp-linux-386.tar.gz" class="btn btn-bg" target="_blank">Download</a>
               </td>
               <td>
                 <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
@@ -96,7 +97,7 @@
             <tr>
               <td>Linux Redhat (AMD X64)</td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-linux-amd64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper-webapp-linux-amd64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
               </td>
               <td>
                 <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
@@ -105,7 +106,7 @@
             <tr>
               <td>Linux Redhat (ARM X64)</td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-linux-arm64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper-webapp-linux-arm64.tar.gz" class="btn btn-bg" target="_blank">Download</a>
               </td>
               <td>
                 <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
@@ -114,7 +115,7 @@
             <tr>
               <td>Linux Redhat (i386)</td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-linux-386.tar.gz" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper-webapp-linux-386.tar.gz" class="btn btn-bg" target="_blank">Download</a>
               </td>
               <td>
                 <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
@@ -123,7 +124,7 @@
             <tr>
               <td>Windows (AMD 64)</td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-windows-amd64.zip" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper-webapp-windows-amd64.zip" class="btn btn-bg" target="_blank">Download</a>
               </td>
               <td>
                 <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
@@ -132,16 +133,16 @@
             <tr>
               <td>Windows (ARM 64)</td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-windows-arm64.zip" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper-webapp-windows-arm64.zip" class="btn btn-bg" target="_blank">Download</a>
               </td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper_0.1.0-alpha_arm64_win.exe" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper_0.1.0-alpha_arm64_win.exe" class="btn btn-bg" target="_blank">Download</a>
               </td>
             </tr>
             <tr>
               <td>Windows (i386)</td>
               <td>
-                <a href="https://github.com/zasper-io/zasper/releases/download/v0.1.0-alpha/zasper-webapp-windows-386.zip" class="btn btn-bg" target="_blank">Download</a>
+                <a href="https://github.com/zasper-io/zasper/releases/download/{{version}}/zasper-webapp-windows-386.zip" class="btn btn-bg" target="_blank">Download</a>
               </td>
               <td>
                 <a href="#" class="btn btn-danger" target="_blank">Coming Soon!</a>
